# osmosis-http-facade

./: .gitignore  README.rst
client/: Makefile  logging.yaml  requirements.txt  setup.cfg
client/osmosis_http_facade_client/cmd/: client.py
service/: Makefile  README.rst  osmosis-http.service  requirements.txt  setup.cfg  setup.py
service/osmosis_http_facade_service/: data_store.py  http_service.py  http_service_flask.py  service.py
service/osmosis_http_facade_service/cmd/: http_service.py  main.py
service/tools/: pip-requires
