[metadata]
name = osmosis-http-facade-client
summary = Stratoscale Deployment
description-file =
    README.rst
author = Stratoscale
author-email = dev@stratoscale.com
home-page = https://github.com/stratoscale/osmosis-http-facade.git
classifier =
    Environment :: Stratoscale
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: TBD
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    osmosis_http_facade_client
data_files =
    share/osmosis_http_facade_client/doc = doc/*
    share/osmosis_http_facade_client/etc_examples = etc/*
    share/osmosis_http_facade_client = setup.cfg

[entry_points]
console_scripts =
    osmosis-http-client = osmosis_http_facade_client.cmd.client:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/
