[metadata]
name = osmosis-http-facade-service
summary = Stratoscale Deployment
description-file =
    README.rst
author = Stratoscale
author-email = dev@stratoscale.com 
home-page = https://github.com/stratoscale/osmosis-http-facade.git
classifier =
    Environment :: Stratoscale
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: TBD
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    osmosis_http_facade_service
data_files =
    share/osmosis_http_facade/doc = doc/*
    share/osmosis_http_facade/etc_examples = etc/*
    share/osmosis_http_facade = setup.cfg

[entry_points]
console_scripts =
    osmosis-http-service = osmosis_http_facade_service.cmd.http_service:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/

[wheel]
universal = 1
